--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,48 +1,31 @@
-.content{
-   display: flex;
-   flex-direction: column;
-   align-items: flex-start;
-   gap: 6px;
-   width: 159px;
-   height:232px;
-   margin:15px;
+.wrapper{
+    width:190px;
 }
 .card{
-    width: 159px;
-height: 205px;
-flex-shrink: 0;
-margin-bottom: 10px;
-border-radius: 10px 10px 10px 10px;
-background: url(../../assets/RectanglePlain.png), lightgray 50% / cover no-repeat;
-
-}
-.subcardimage{
-    width: 159px;
-height: 170px;
-flex-shrink: 0;
-}
-.followers{
-    width:100%;
-    height:20%;
-    color:var(--color-white);
     position:relative;
-    background-color: var(--color-white);
+    width:190px;
+    height:215px;
+    border-radius: 10px;
+    overflow: hidden;
 }
-
-.followers h3{
-    background-color: var(--color-black);
-    left:5px;
-    top:10px;
-    padding-left: 5px;
-    padding-right: 5px;
-    border:1px solid var(--color-black);
-    border-radius: 65px;
-    font-weight:200;
-    font-size:15px;
+.banner{
     position:absolute;
+    bottom:0;
+    left:0;
+    width:100%;
+    height:42px;
+    background-color: var(--color-white);
+    display:flex;
+    align-items: center;
+    padding:6px;
 
+    .chip {
+        background-color: var(--color-black);
+        color: var(--color-white);
+    }
 }
-.title{
-font-size: 14px;
-font-style: normal;
+.titlewrapper{
+    margin-top: 6px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
